# simdit

./: .gitmodules  CMakeLists.txt  README.md  imgui.ini
source/: CMakeLists.txt  main.c  main.cpp
test/: CMakeLists.txt
